# plugins

./: README.md
hugging-face/exports/commands/: hugfc-command.js
hugging-face/exports/config/: config.js
hugging-face/module/: package.json
hugging-face/module/commands/: hugfc-command.js
hugging-face/module/config/: config.js
hugging-face/module/module/: hugging-face-module.js
hugging-face/src/get_model_card/: cli.py
hugging-face/tasks/: hugfc-com.md  hugfc-mod.md
speech/: README.md  package.json
speech/.specifications/: speech-plugin-model.md
speech/doc/: commands-usage.md  implementation.md  speech-plugin-usage.md
speech/src/: main.js  speech-plugin.js  test.js
speech/src/backend/: server.js
speech/src/commands/: get-running-status.js  get-voices.js  launch-server.js  open-browser.js  speak.js
speech/src/scripts/: launch-edge.ps1
speech/tasks/: dev-speech-plugin.md
src/API/hugging-face/: README.md  pyproject.toml
src/API/hugging-face/exports/: package.json
src/API/hugging-face/exports/commands/: hugfc-command.js
src/API/hugging-face/exports/config/: config.js
src/API/hugging-face/exports/module/: hugging-face-module.js
src/API/hugging-face/exports/plugin/: hugging-face-plugin.js
src/API/hugging-face/src/get_model_card.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/API/hugging-face/tasks/: dev-tool.md  hugfc-com-upd.md  hugfc-com.md  hugfc-mod.md  hugfc-plugin.md
src/TTS/: package.json  tts-module-base.js  tts-plugin-base.js
tasks/: dev-com.md  dev-module.md  dev-plugin.md
(+37 files in other folders)
